<resources>
    <!-- NAMES -->
    <string name="app_name">Pokébase</string>
    <string name="enter_name">Enter your name</string>
    <string name="pokebase">Pokébase</string>
    <string name="teams">My Teams</string>
    <string name="new_team">New Team</string>

    <!-- TITLES -->
    <string name="name_title">First, what is\nyour name?</string>
    <string name="gender_title">Are you a Boy?\nOr are you a Girl?</string>
    <string name="setup_title">Setting up\nyour Pokébase&#8230;</string>
    <string name="go_back">Go Back</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="login_title">What was your\nname again?</string>
    <string name="add_team_title">Choose a team to add to!</string>
    <string name="logout_question">Are you sure you want to logout?</string>

    <!-- VALUES -->
    <string name="logo_transition">Logo transition</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <!-- BUTTONS -->
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- LABELS -->
    <string name="count">0/15</string>
    <string name="team_description">Create your own teams\n
        to save for later when it\'s time to battle!</string>
    <string name="pokedex_description">View your Pokébase and look up\n
        information on all 721 Pokémon.</string>
    <string name="make_team">Make your first team!</string>
    <string name="back_prompt">Are you sure you want to go back?\nAll changes will be lost.</string>
    <string name="type">Type</string>
    <string name="species">Species</string>
    <string name="region">Region</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="baseExp">Base EXP</string>
    <string name="normal">Normal</string>
    <string name="evolutions">Evolutions</string>
    <string name="moveset">Move Set</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_hint">Enter your Pokémon\'s nickname</string>
    <string name="team_name">Team Name</string>
    <string name="description">Description</string>
    <string name="add_pokemon">Add Pokémon</string>
    <string name="no_pokemon">No Pokémon Added Yet!</string>
    <string name="lvl">Lvl.</string>
    <string name="hundred">100</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="create_user">Create User</string>
    <string name="go">Go!</string>
    <string name="taken">Username Already Taken!</string>
    <string name="new_name">Please enter a new username.</string>
    <string name="ok">OK</string>
    <string name="not_found">Username Not Found!</string>
    <string name="try_again">Please try again.</string>
    <string name="logout">Logout</string>
    <string name="oddish">Oddish</string>
</resources>
