<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">

    <include layout="@layout/tool_bar"
        android:id="@+id/toolbar"/>
    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/detail_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_above="@+id/evolutions"
        android:orientation="vertical"
        android:paddingTop="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hashtag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="#"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="133"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eevee"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    style="@style/ProfileLeftText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/type" />

                <TextView
                    style="@style/ProfileLeftText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/species" />

                <TextView
                    style="@style/ProfileLeftText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/region" />

                <TextView
                    style="@style/ProfileLeftText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/height" />

                <TextView
                    style="@style/ProfileLeftText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/weight" />

                <TextView
                    style="@style/ProfileLeftText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/baseExp" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/type_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:background="@color/normalType"
                        android:padding="3dp"
                        android:text="@string/normal"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/type_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/normalType"
                        android:padding="3dp"
                        android:text="@string/normal"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/species"
                    style="@style/ProfileRightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="Evolution" />

                <TextView
                    android:id="@+id/region"
                    style="@style/ProfileRightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="Kanto" />

                <TextView
                    android:id="@+id/height"
                    style="@style/ProfileRightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="1'0'' (0.30 m)" />

                <TextView
                    android:id="@+id/weight"
                    style="@style/ProfileRightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="14.3 lbs (6.5 kg)" />

                <TextView
                    android:id="@+id/exp"
                    style="@style/ProfileRightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="95" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/moves_label"
            style="@style/ProfileSectionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:textAlignment="center"
            android:text="@string/moveset" />
        <ListView
            android:id="@+id/moves_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:divider="@android:color/transparent"/>
    </LinearLayout>

    <Button
        android:id="@+id/evolutions"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:text="@string/evolutions"
        android:onClick="showEvolutions"
        android:background="@drawable/rounded_corners" />
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_above="@id/detail_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-80dp"
        android:background="@drawable/circle_shape"
        android:scaleType="center"
        android:src="@drawable/sprites_115" />
</RelativeLayout>