<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:lines="2"
            android:text="@string/gender_title"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/boy_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/button_pressed"
                android:scaleType="fitCenter"
                android:padding="20dp"
                android:src="@drawable/boy"
                style="?android:attr/buttonBarButtonStyle"/>
            <ImageButton
                android:id="@+id/girl_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/button_pressed"
                android:scaleType="fitCenter"
                android:padding="20dp"
                android:src="@drawable/girl"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/back_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>


    <Button
        android:id="@+id/next_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>


</RelativeLayout>